admin-dashboard.css
body {
    margin: 0;
    font-family: helvetica, arial, san-serif;
}


/* * {
    box-sizing: border-box;
} */

p {
    margin-bottom: 0px;
}

.first {
    background-color: #ddeffb;
}

.container {
    display: flex;
    padding: 16px;
    background-color: transparent;
}

nav {
    width: 100%;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    color: #222f3e;
    font-family: "Poppins", san-serif;
}

a:hover {
    color: blue;
    cursor: crosshair;
}

.column1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    padding: 5%;
}

.column2 {
    width: 100%;
}

.hero-image {
    float: right;
    max-height: 80vh;
    margin-bottom: 0px;
    justify-content: end;
    display: flex;
}

.hero-text {
    font-family: "Poppins", san-serif;
    background-color: rgba(255, 255, 255, 0.7);
    padding: 5em;
    border-radius: 10px;
}

.hero-text p {
    text-align: justify;
}

.row {
    display: flex;
    flex-direction: row;
}

.search-btn {
    background-color: yellow;
    font-family: "Poppins", san-serif;
    font-weight: 700;
    padding: 0.8em 2em;
    border: none;
    border-radius: 10px;
    font-size: 16px;
    margin-top: 10px;
    box-shadow: 0px 8px 10px black;
}

.search-btn:hover {
    color: yellow;
    background-color: black;
}

.search-btn:active {
    box-shadow: 0px 2px 10px black;
}

.second {
    background-color: white;
    min-height: 500px;
    text-align: center;
    background-image: url("https://cdn.glitch.com/5f8445e6-7cb3-47ef-8b81-884235184212%2Fbackground-image.jpg?v=1584962577527");
    background-repeat: no-repeat;
    background-size: cover;
}

.product-list {
    background-color: #dfe6e9;
    padding: 3em;
}

.product-list .card {
    background-color: white;
    border-radius: 10px;
    padding: 1em;
    box-shadow: 0px 10px 5px #b2bec3;
    text-align: center;
    font-family: "Poppins";
}

.card .title {
    font-size: 18px;
    font-weight: bold;
}

.card img {
    max-width: 100%;
    border-radius: 5px;
}

.card .text {
    text-align: left;
    margin-left: 2em;
    margin-bottom: 0.5em;
    font-size: 12px;
}

.card .price {
    text-align: right;
    margin-right: 2em;
    margin-bottom: 0.5em;
    font-size: 12px;
}

.buy-button {
    background-color: #f9ca24;
    border: none;
    padding: 1em;
    border-radius: 5px;
    font-weight: bold;
    width: 100%;
}

.buy-button:hover {
    box-shadow: 0px 5px 5px #b2bec3;
    color: #eb4d4b;
}

.product-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 20px;
    grid-row-gap: 40px;
}

.align-center {
    text-align: center;
}

.nav-list {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0px 3em;
}

.sub-menu {
    max-width: 20%;
    padding: 1em;
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0px 2px 10px #8395a7;
    position: absolute;
    visibility: hidden;
    opacity: 0;
    transition: 1s ease;
}

.sub-menu a:hover {
    color: #8395a7;
}

nav ul li:hover .sub-menu {
    opacity: 1;
    visibility: visible;
    transition: 1s ease;
}

.card img {
    transition: 0.5s ease;
}

.card:hover img {
    transform: scale(1.1);
    transition: 1s ease;
}

.card .details {
    position: relative;
    top: 50px;
    transition: 2s ease;
    visibility: hidden;
    opacity: 0;
}

.card:hover .details {
    opacity: 1;
    visibility: visible;
    top: 0px;
    transition: 2s ease;
}

.text,
.title {
    opacity: 1;
    transition: 0.5s ease;
}

.card:hover .text,
.card:hover .title {
    opacity: 0;
    transition: 1 ease;
}

.new {
    width: 50px;
    height: 50px;
    position: absolute;
    z-index: 5;
    animation: pulse 2s ease-in infinite;
}

@keyframes pulse {
    0% {
        transform: scale (1);
    }
    50% {
        transform: rotate(45deg) scale(1.3);
    }
}

.searchbar {
    background: #fff;
    height: 40px;
    margin: 1em auto;
    border-radius: 10px;
    border: 2px solid #e4e4e4;
    display: flex;
    padding: 0.3em;
    width: 10%;
    transition: width 0.5s ease-in;
}

.search-icon {
    width: 100%;
    background: url("https://cdn.glitch.com/9cf36649-4cc8-43b3-936f-9f591ad3040c%2Fmagnifying-glass.svg?v=1586850286628") no-repeat center center;
    background-size: contain;
    margin: 0.5em;
    opacity: 0.5;
}

.search-input {
    width: 90%;
    margin: 0.5em;
    border: none;
    color: #b4b4b4;
    font-family: 'Poppins';
    display: none;
}

.searchbar:hover {
    width: 60%;
    box-shadow: 0 2px 15px #b4b4b4;
    transition: width 1s ease-in;
}

.searchbar:hover .search-input {
    display: flex;
    transition: 1s ease-in;
}

.searchbar:hover .search-icon {
    opacity: 1;
    width: 10%;
    transition: width 1s ease-in;
}

.search-input:focus {
    outline: none;
}

.modal-hidden-edit {
    border: 1px solid #E3E4E8;
    border-radius: 10px;
    display: block;
    align-items: center;
    position: fixed;
    z-index: +1;
    opacity: 0;
    visibility: hidden;
    transform: scale(1.1);
    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
}

.show-modal-edit {
    position: absolute;
    top: 1px;
    left: 1px;
    height: 100%;
    width: 100%;
    background: #000000 0% 0% no-repeat padding-box;
    opacity: 0.55;
    /* UI Properties */
    background: #FFFFFF 0% 0% no-repeat padding-box;
    opacity: 1;
    margin: auto;
    /* display: flex; */
    align-items: center;
    z-index: 2 !important;
    opacity: 1 !important;
    visibility: visible !important;
    transform: scale(1.0) !important;
    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s !important;
}

.modal-content-edit {
    border: 1px solid #E3E4E8;
    background-color: #fff;
    border-radius: 10px;
    width: 35%;
    margin: auto;
    margin-top: 5%;
    /* height: 630px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -70%); */
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    pointer-events: auto;
    background-color: #fff;
    background-clip: padding-box;
}

.close-button {
    width: 70%;
    line-height: 1.5rem;
    text-align: center;
    cursor: pointer;
    border-radius: 0.25rem;
    background-color: lightgray;
}

.close-button:hover {
    background-color: darkgray;
}

.modal-title {
    /* margin: auto; */
    top: 214px;
    left: 463px;
    height: 47px;
    text-align: left;
    font: normal normal bold 32px Heebo;
    letter-spacing: 0px;
    color: #0A558B;
    opacity: 1;
}

input {
    width: 70%;
}

.dropdown-check-list {
    display: inline-block;
}

.dropdown-check-list .anchor {
    position: relative;
    cursor: pointer;
    display: inline-block;
    padding: 5px 50px 5px 10px;
    border: 1px solid #ccc;
}

.dropdown-check-list .anchor:after {
    position: absolute;
    content: "";
    border-left: 2px solid black;
    border-top: 2px solid black;
    padding: 5px;
    right: 10px;
    top: 20%;
    -moz-transform: rotate(-135deg);
    -ms-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    transform: rotate(-135deg);
}

.dropdown-check-list .anchor:active:after {
    right: 8px;
    top: 21%;
}

.dropdown-check-list ul.categories {
    padding: 2px;
    display: none;
    margin: 0;
    border: 1px solid #ccc;
    border-top: none;
}

.dropdown-check-list ul.categories li {
    list-style: none;
}

.dropdown-check-list.visible .anchor {
    color: #0094ff;
}

.dropdown-check-list.visible .categories {
    display: block;
}

input[type=checkbox] {
    width: 20px;
    float: left;
}

li.category-list {
    margin-bottom: 5px;
}

li.size-list {
    margin-bottom: 5px;
}

.dropdown-check-list ul.sizes {
    padding: 2px;
    display: none;
    margin: 0;
    border: 1px solid #ccc;
    border-top: none;
}

.dropdown-check-list ul.sizes li {
    list-style: none;
}

.dropdown-check-list.visible .sizes {
    display: block;
}

